Footer__nav ul gap fixed

--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -94,8 +94,8 @@
 
     .footer__nav ul {
         flex-wrap: wrap;
-        column-gap: 1rem;
-        row-gap: 1rem;
+        column-gap: 0.8rem;
+        row-gap: 0.8rem;
     }
 
     .social__link {
